# Multi-Model-Workflow

./: .gitignore  README.md  index.html  multi model workflow Instructions.txt  multi model workflow convo.txt  package-lock.json  package.json  setup.sh  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  panels.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  bridge_server.rs  commands.rs  lib.rs  main.rs  state.rs
src/components/: ModelCard.tsx  OrchestratorPanel.tsx
